# libigl

./: .clang-format  CMakeLists.txt  ReadMe.md  boundaries.cpp  curvature.cpp  geodesic_distance.cpp  isolines.cpp  load_mesh.cpp  main.cpp  mesh_mass_matrix.cpp  mesh_parametrisations.cpp  quad_mesh_planarization.cpp  ray_mesh_intersection.cpp
